# dsa-perf-micros

./: .gitignore  LICENSE  README.md  configure.ac
doc/: Makefile  build.rst  conf.py  dsa_configuration.rst  index.rst  iommu_off.rst  options.rst  sample_command_lines.rst  submitting_patches.rst  system_configuration.rst  system_requirements.rst
scripts/: interdomain_comparision.sh  pci_bind.sh  run_bw_lat.sh  setup_dsa.sh  test_basic.sh  test_interdomain.sh
src/: Makefile.am  common.h  cpu.c  cpu.h  crc16_t10_lookup.h  device.c  device.h  dsa.h  idxd.h  idxd_device.c  idxd_device.h  init.c  init.h  log.c  log.h  main.c  options.c  options.h  prep.c  prep.h  user_device.c  user_device.h  util.c  util.h
